# peeplist

./: .gitignore  Cargo.toml  DESIGN_PROGRESS.md  Dioxus.toml  README.md  build.rs  build.sh  dumpdb.sh  schema.sql  serve-local.sh  tailwind-config.js  tailwind.css
assets/: ae47c6a44d.js  tailwind.css
assets/styling/: main.css
docker/: docker-compose.yml
scripts/: .env.deploy.example  deploy-marketing.sh
src/: lib.rs  main.rs  quick_capture.rs  theme.rs  todo.md  types.rs  ui.rs  urgency.rs  utils.rs
src/api/: auth.rs  client.rs  entity.rs  import.rs  local.rs  local_desktop.rs  login.rs  mod.rs  moment.rs  storage.rs  vault_format.rs
src/components/: entity.rs  graph.rs  mod.rs  moment.rs  settings.rs  sidebar.rs
src/layouts/: navbar.rs
src/views/: auth.rs  home.rs  mod.rs
