[package]
name = "peeplist"
version = "0.1.0"
authors = ["A.O. Poston <aotisg@gmail.com>"]
edition = "2021"
build = "build.rs"

[build-dependencies]
dotenv = "0.15.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-logger = "0.7.9"
log = "0.4.31"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
chrono = { version = "0.4", features = ["serde"] }
web-sys = { version = "0.3", features = ["console", "Window", "Storage"] }
dotenv = "0.15.0"
uuid = { version = "1.23.2", features = ["serde", "v4", "js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
serde_json = "1"
futures = "0.3.32"
# dioxus-sdk-window = "0.7.0"
# dioxus-sdk = { version = "0.7", features = ["window"] }
gloo-events = "0.2"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
lumen-blocks = { git = "https://github.com/Leaf-Computer/lumen-blocks.git", tag = "v0.3.0" }
# YAML (de)serialization for the local vault format (see src/api/vault_format.rs).
# Maintained fork — serde_yaml was archived upstream in 2024.
serde_norway = "0.9"
# Unicode-safe filename slugs for the vault's people/*.md files.
slug = "0.1"
# Desktop-only: cross-platform resolution of the default vault root
# (~/Documents/Peeplist/ or platform equivalent). See src/api/local_desktop.rs.
directories = { version = "5", optional = true }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop", "dep:directories"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = ["dioxus/server"]
